# outreach-engine

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
api/: index.py  requirements.txt
api/app/: config.py  main.py
api/app/routers/: email.py  leads.py  telegram.py
api/app/services/: dns_checker.py  lead_enrichment.py  telegram_notifier.py
n8n/workflows/: email-domain-health.json  lead-enrichment-pipeline.json
scripts/: check_domain.py
