[project]
name = "outreach-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "dnspython>=2.7.0",
    "python-dotenv>=1.0.0",
    "eval_type_backport>=0.2.0",
]

[tool.vercel]
entrypoint = "api/index.py"
